create responsability domain
